--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
@@ -41,5 +42,6 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0"
-  }
+  },
+  "proxy": "http://localhost:5000/"
 }
